--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ img {
     border-radius: 10px;
     max-width: 40%;
     height: auto;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
 }
 
