--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ img {
     border-radius: 10px;
     max-width: 40%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
 
@@ -650,7 +650,8 @@ img {
 
 @media (max-width: 500px){
     .hero .hero-image {
-        max-width: 50%;
+        max-width: 60%;
+        height: 100px;
     }
 
     .text-xxl {
