another try for hero image

--- a/css/style.css
+++ b/css/style.css
@@ -652,6 +652,7 @@ img {
     .hero .hero-image {
         max-width: 60%;
         height: 100px;
+        overflow: hidden;
     }
 
     .text-xxl {
