adding ui adjustmnets

--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,24 @@ img {
     margin-right: 20px;       /* add some space between the text and the image */
 }
 
+.hero-image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Style the image so it doesn't overflow */
 .hero-image {
-    max-width: 30%;          /* ensures the image is responsive */
-    height: auto;             /* maintain aspect ratio */
+    max-width: 30%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.hero-location {
+    text-align: center;
+    font-weight: 500;
+    color: #555;
 }
 
 /* Pricing */
@@ -375,7 +389,7 @@ img {
     flex-grow: 1; /* Allows text to take up space evenly */
 }
 
-.testimonials .testimonial-author {
+.testimonials .testimonial-author p {
     margin-top: 20px;
     font-weight: bold;
     text-align: right;
@@ -384,7 +398,6 @@ img {
     color: #444;
     font-style: italic;
 }
-
 
 /* Contact Form */
 .contact-form-header {
